Prevent word wrap on date cells

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -353,6 +353,9 @@ header {
 	.no-auto-renew {
 		.text-danger;
 	}
+	.date {
+		white-space: nowrap;
+	}
 }
 
 
